src/components/Projects/Projects.scss
@import "../../Styles/global";

.projects {
  padding: 1em 0;
  width: 100%;
  &__container {
    display: flex;
    margin-top: 10%;
    justify-content: space-evenly;
    flex-wrap: wrap;
  }
  &__content {
    background-color: transparent;

    width: 80%;
    height: 100%;
    border-radius: 5px;
    position: relative;
    margin: 40px auto;
    overflow: hidden;
    @include tablet {
      width: 35%;
      max-width: 350px;
    }
    @include desktop {
      max-width: 550px;
    }
  }
  &__content-overlay {
    background: rgba(248, 240, 240, 0.7);
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    opacity: 0;
    -webkit-transition: all 0.4s ease-in-out 0s;
    -moz-transition: all 0.4s ease-in-out 0s;
    transition: all 0.4s ease-in-out 0s;
  }
  &__content-image {
    width: 100%;
    height: 300px;
    // object-fit: cover;
    border: 5px solid white;
    border-radius: 5px;
    @include desktop {
      height: 600px;
    }
  }
  &__content-details {
    position: absolute;
    text-align: center;
    padding-left: 1em;
    padding-right: 1em;
    width: 100%;
    height: 90%;
    top: 50%;
    left: 50%;
    opacity: 0;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    -webkit-transition: all 0.3s ease-in-out 0s;
    -moz-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
    @include tablet {
      height: 40%;
    }
  }
  &__content-title {
    // color: #1a1a1a;
    text-align: center;
    // margin-bottom: 10px;
    margin-top: 2px;
    margin-bottom: 0;
    font-family: "BreeSerif";
    font-size: 2rem;
    color: #fff;
    font-weight: 500;
    letter-spacing: 0.15em;
    text-transform: uppercase;
    @include tablet {
      font-size: 1.5rem;
    }
    @include desktop {
      font-size: 2rem;
    }
  }
  &__content-text {
    font-family: "BreeSerif";
    color: white;
    font-size: 0.9rem;
    @include tablet {
      margin-top: 3%;
    }
    @include desktop {
      margin-top: 5%;
      font-size: 1.2rem;
    }
  }
  &__link-wrp {
    width: 100%;
    margin-top: 5%;
    display: flex;
    justify-content: center;
  }
  &__content-link {
    width: 30%;
    cursor: grab;
    @include desktop {
      width: 10%;
    }
  }
  &__social-icon {
    margin-top: 10px;
    margin-bottom: 10px;
    color: white;
    &:hover {
      color: #45eeff;
    }
    @include desktop {
      margin-top: 20px;
    }
  }
}

@media screen and (max-width: 766px) {
  .projects__container {
    display: block;
    height: 100%;
    width: 100%;
  }
}

.projects__content:hover .projects__content-overlay {
  opacity: 1;
}

.projects__content:hover .projects__content-details {
  top: 50%;
  left: 50%;
  opacity: 0.7;
  height: auto;
}

.fadeIn-bottom {
  top: 80%;
}

